# MessAuto

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: release-drafter.yml
.github/workflows/: main.yml
docs/: README-EN.md
locales/: en.yml  zh-CN.yml
src/: app.rs  float_window.rs  lib.rs  main.rs  tray_icon.rs
tests/: lib_tests.rs
ui/: appwindow.slint  info.plist
