[package]
name = "MessAuto"
version = "0.5.0"
edition = "2021"
description = "Automatic extraction of Email and SMS verification code for Mac platform."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-locale = "0.3.1"
tray-icon = "0.9.0"
tao = "0.22.2"
rust-i18n = "2.2.1"
serde_json = "1.0.107"
serde = "1.0.188"
home = "0.5.5"
auto-launch = "0.5.0"
native-dialog = "0.6.4"
macos-accessibility-client = "0.0.1"
enigo = "0.1.3"
clipboard = "0.5.0"
regex-lite = "0.1.0"
log = { version = "0.4.20", features = [] }
simplelog = "0.12.1"
notify = "6.1.1"
futures = "0.3.28"
emlx = "0.1.0"
mail-parser = "0.9.1"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[package.metadata.bundle]
name = "MessAuto"
identifier = "com.doe.messauto"
icon = ["images/icon.icns"]
copyright = "Copyright (c) LeeeSe 2022. All rights reserved."
short_description = "Automatic extraction of SMS verification code for Mac platform."
