[package]
name = "MessAuto"
version = "0.8.5"
edition = "2021"
description = "Automatic extraction of Email and SMS verification code for Mac platform."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-locale = "0.3.1"
tray-icon = "0.14.1"
tao = "0.28.0"
rust-i18n = "3.0.1"
serde_json = "1.0.107"
serde = "1.0.188"
home = "0.5.5"
auto-launch = "0.5.0"
native-dialog = "0.7.0"
macos-accessibility-client = "0.0.1"
regex-lite = "0.1.5"
log = { version = "0.4.20", features = [] }
simplelog = "0.12.1"
notify = "6.1.1"
futures = "0.3.28"
emlx = "0.1.0"
mail-parser = "0.9.1"
slint = { git = "https://github.com/LeeeSe/slint.git", tag = "v1.5.2" }
image = "0.25.0"
i-slint-backend-winit = { git = "https://github.com/LeeeSe/slint.git", tag = "v1.5.2" }
mouse_position = "0.1.3"
async-std = "1.12.0"
arboard = "3.3.2"
osakit = "0.2.3"


[build-dependencies]
slint-build = "1.5.1"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"

[package.metadata.bundle]
name = "MessAuto"
identifier = "com.doe.messauto"
icon = ["assets/images/icon_256.png"]
copyright = "Copyright (c) LeeeSe 2022. All rights reserved."
short_description = "Automatic extraction of SMS verification code for Mac platform."
resources = ["assets/images/icon.png"]
osx_info_plist_exts = ["ui/info.plist"]
